fix: stub SubTaskStatus forward refs and fix ArtefactRef type mismatch (#105)
Pre-existing build break — SubTaskStatus not yet in casehub-blocks,
ReviewChannelProjection used String for artefactRefs (now List<ArtefactRef>).

Refs #105